--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -21,6 +21,7 @@
         <activity android:name=".SimpleActivity">
 
         </activity>
+        <activity android:name=".DemoStateUIActivity" />
     </application>
 
 </manifest>
