--- a/basestateui/build.gradle
+++ b/basestateui/build.gradle
@@ -32,6 +32,27 @@ dependencies {
     implementation 'com.zdg.android:stateview:0.0.1'
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
 }
-repositories {
-    mavenCentral()
+ext{
+    bintrayRepo = 'maven'
+    bintrayName = 'stateview'
+
+    publishedGroupId = 'com.zdg.android'
+    libraryName = 'stateview'
+    artifact = 'stateview'
+    maturity ='Development'
+    libraryDescription = 'view state'
+
+    siteUrl = 'https://github.com/zdongcoding/StateViewManager'
+    gitUrl = 'https://github.com/zdongcoding/StateViewManager.git'
+    issueUrl='https://github.com/zdongcoding/StateViewManager/issues'
+    libraryVersion = '0.0.1'
+    alllabels = ['android']
+    developerId = 'zdongcoding'
+    developerName = 'zoudong'
+    developerEmail = 'zoudongq1990@gmail.com'
+
+    licenseName = 'The Apache Software License, Version 2.0'
+    licenseUrl = 'http://www.apache.org/licenses/LICENSE-2.0.txt'
+    allLicenses = ["Apache-2.0"]
 }
+apply from: 'https://raw.githubusercontent.com/zdongcoding/bintrayhelper/master/SimpleBintray.gradle'
