--- a/basestateui/build.gradle
+++ b/basestateui/build.gradle
@@ -29,7 +29,7 @@ dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
 
     compileOnly 'com.android.support:appcompat-v7:28.0.0'
-    implementation 'com.zdg.android:stateview:0.0.1'
+    api 'com.zdg.android:stateview:0.0.1'
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
 }
 ext{
@@ -45,7 +45,7 @@ ext{
     siteUrl = 'https://github.com/zdongcoding/StateViewManager'
     gitUrl = 'https://github.com/zdongcoding/StateViewManager.git'
     issueUrl='https://github.com/zdongcoding/StateViewManager/issues'
-    libraryVersion = '0.0.1'
+    libraryVersion = '0.0.2-beta'
     alllabels = ['android']
     developerId = 'zdongcoding'
     developerName = 'zoudong'
