--- a/basestateui/build.gradle
+++ b/basestateui/build.gradle
@@ -26,11 +26,10 @@ android {
 }
 
 dependencies {
-    implementation fileTree(dir: 'libs', include: ['*.jar'])
-
+    implementation fileTree(include: ['*.jar'], dir: 'libs')
     compileOnly 'com.android.support:appcompat-v7:28.0.0'
-    api 'com.zdg.android:stateview:0.0.1'
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
+    implementation project(':stateview')
 }
 ext{
     bintrayRepo = 'maven'
