--- a/basestateui/build.gradle
+++ b/basestateui/build.gradle
@@ -29,7 +29,7 @@ dependencies {
     implementation fileTree(include: ['*.jar'], dir: 'libs')
     compileOnly 'com.android.support:appcompat-v7:28.0.0'
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
-    implementation project(':stateview')
+    api project(':stateview')
 }
 ext{
     bintrayRepo = 'maven'
